# nextlook

./: .gitignore  CMakeLists.txt  INSTALL.md  NeXtLook.ini  NeXtRAD.ini  README.md  experiment.ini  main.cpp  nextProc.geany  parameters.hpp  quicklook.geany  test_num_samples.m~
doc/: nextlook.tex
reference_signals/: mattodat.m  mattodat.m~
reference_signals/2016_dec/matlab_format/: Ref_PL_Lband_MPA_IMT0_6us.mat  Ref_PL_Lband_MPA_IMT1_5us.mat  Ref_PL_Lband_MPA_IMT7_5us.mat  Ref_PL_Lband_MPA_IMT_3us.mat  Ref_PL_Xband_MPALNA_10us.mat  Ref_PL_Xband_MPALNA_1us.mat  Ref_PL_Xband_MPALNA_3us.mat
reference_signals/2017_jun/mat_files/: RefPulse_Lband_0_5us.mat  RefPulse_Lband_0_6us.mat  RefPulse_Lband_10us.mat  RefPulse_Lband_1_5us.mat  RefPulse_Lband_1us.mat  RefPulse_Lband_3us.mat  RefPulse_Lband_5us.mat  RefPulse_Lband_7_5us.mat  RefPulse_Xband_0_5us.mat  RefPulse_Xband_0_6us.mat  RefPulse_Xband_10us.mat  RefPulse_Xband_1_5us.mat  RefPulse_Xband_1us.mat  RefPulse_Xband_3us.mat  matplot.m  (+3 more)
reference_signals/matlab_format/: Ref_PL_Lband_MPA_IMT_10us.mat  Ref_PL_Lband_MPA_IMT_1us.mat  Ref_PL_Lband_MPA_IMT_5us.mat  Ref_PL_Xband_MPALNA_0_6us.mat  Ref_PL_Xband_MPALNA_5us.mat  Ref_PL_Xband_MPALNA_7_5us.mat
refs/: README.txt
results/: poc_time_return_waveform.eps
source/: fft.cpp~  fft.hpp~  file_io.cpp~  file_io.hpp~  general.hpp~  includes.hpp  logger.cpp  logger.hpp  main.cpp  parameters.hpp  plotting.cpp  plotting.cpp~  plotting.hpp  plotting.hpp~  signal_processor.cpp  signal_processor.hpp  window.hpp
source/utilities/: logger.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
src/: ConvertUTF.cpp  SimpleIni.hpp  experiment.hpp  logger.cpp  logger.hpp  main.cpp  plotting.cpp  plotting.hpp  signal_processor.cpp  signal_processor.hpp  timer.hpp  window.cpp  window.hpp
utils/: mattodat.m
